--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "email-validator-net",
-  "version": "2.0.0",
+  "version": "2.0.1",
   "description": "Wrapper for api.email-validator.net",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
@@ -33,6 +33,7 @@
   "devDependencies": {
     "@types/axios": "^0.14.0",
     "@types/jest": "^24.0.14",
+    "@types/node": "^12.0.8",
     "jest": "^24.8.0",
     "prettier": "^1.18.2",
     "ts-jest": "^24.0.2",
