--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "email-validator-net",
-  "version": "2.0.3",
+  "version": "2.0.4",
   "description": "A wrapper for api.email-validator.net",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
@@ -8,6 +8,9 @@
   "homepage": "https://www.email-validator.net/api.html",
   "keywords": [
     "email-validation",
+    "email verification",
+    "email validation",
+    "email cleaning",
     "email",
     "validation",
     "byteplant",
