--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "email-validator-net",
-  "version": "2.0.7",
+  "version": "2.0.8",
   "description": "A wrapper for api.email-validator.net",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
@@ -53,6 +53,7 @@
     "typescript": "^3.5.1"
   },
   "dependencies": {
-    "axios": "^0.19.0"
+    "axios": "^0.19.0",
+    "minimist": "0.2.1"
   }
 }
